compiler/test/fail/non_const_enum.ts
// All enums must be declared with the const keyword before enum

enum Foo {
  first,
  second,
}
